test/message/error_with_undefined.out
abc undefined def
*error_with_undefined.js:*
  throw new Error(msg);
  ^

Error: abc undefined def
    at fun undefined tion (*error_with_undefined.js:*:*)
    at Object.<anonymous> (*error_with_undefined.js:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:*:*)
    at Module.load (internal/modules/cjs/loader.js:*:*)
    at Function.Module._load (internal/modules/cjs/loader.js:*:*)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:*:*)
    at internal/main/run_main_module.js:*:*
